# WebRTC-Remote-Desktop

./: CMakeLists.txt  InputHelper.cpp  LICENSE  LICENSE.MD  LICENSE.txt  README.MD  build.bat  build_installer.bat  index.html  main.cpp  run.bat  styles.css  turn_config.example.json  uninstall.bat  vcpkg.json
hpp/: audio.hpp  capture.hpp  clipboard.hpp  common.hpp  encoder.hpp  input.hpp  signaling.hpp  webrtc.hpp
js/: clipboard.js  input.js  media.js  network.js  renderer.js  state.js  ui.js
worker/: package.json  wrangler.toml
worker/src/: index.js
